modification du fichier checkout.html, cart.html et lajout de fichier cart.js

--- a/Products.html
+++ b/Products.html
@@ -40,7 +40,7 @@
             <ul class="menu-bar">
 
                 <li>&#36;0.00</li>
-                <li><i class='fas fa-shopping-cart'></i></li>
+                <li><a href="http://127.0.0.1:5500/Elevate_Fit/cart.html"><i class='fas fa-shopping-cart'></i></a></li>
 
             </ul>
 
@@ -86,12 +86,13 @@
 
             <div class="col-4 product" data-price="70" data-category="T-shirt">
                     <div class="panier">
+                        <img src="Images/product-1.jpg " class="image">
                         <div class="ajouter_panier">
                             <i class="fa-solid fa-cart-plus"></i>
                         </div>
-                        <img src="Images/product-1.jpg " class="image">
                     </div>
                 <h4>Red Printed T-shirt</h4>
+                <h5 class="reference">0</h5>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -104,12 +105,13 @@
 
             <div class="col-4 product" data-price="60" data-category="shoes">
                 <div class="panier">
+                    <img src="Images/product-2.jpg" class="image">
                     <div class="ajouter_panier">
                         <i class="fa-solid fa-cart-plus"></i>
                     </div>
-                    <img src="Images/product-2.jpg">
                 </div>
                 <h4>Red Printed shoes</h4>
+                <h5 class="reference">1</h5>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -122,12 +124,13 @@
 
             <div class="col-4 product" data-price="30" data-category="T-shirt">
                 <div class="panier">
+                    <img src="Images/product-3.jpg" class="image">
                     <div class="ajouter_panier">
                         <i class="fa-solid fa-cart-plus"></i>
                     </div>
-                    <img src="Images/product-3.jpg">
                 </div>
                 <h4>Red Printed T-shirt</h4>
+                <h5 class="reference">2</h5>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -140,12 +143,13 @@
 
             <div class="col-4 product" data-price="30" data-category="T-shirt">
                 <div class="panier">
+                    <img src="Images/product-4.jpg" class="image">
                     <div class="ajouter_panier">
                         <i class="fa-solid fa-cart-plus"></i>
                     </div>
-                    <img src="Images/product-4.jpg">
                 </div>
                 <h4>Red Printed T-shirt</h4>
+                <h5 class="reference">3</h5>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -163,12 +167,13 @@
 
             <div class="col-4 product" data-price="50" data-category="shoes">
                 <div class="panier">
+                    <img src="Images/product-5.jpg" class="image">
                     <div class="ajouter_panier">
                         <i class="fa-solid fa-cart-plus"></i>
                     </div>
-                    <img src="Images/product-5.jpg">
                 </div>
                 <h4>Red Printed shoes</h4>
+                <h5 class="reference">4</h5>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -181,12 +186,13 @@
 
             <div class="col-4 product" data-price="40" data-category="T-shirt">
                 <div class="panier">
+                    <img src="Images/product-6.jpg" class="image">
                     <div class="ajouter_panier">
                         <i class="fa-solid fa-cart-plus"></i>
                     </div>
-                    <img src="Images/product-6.jpg">
                 </div>
                 <h4>Red Printed T-shirt</h4>
+                <h5 class="reference">5</h5>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -199,12 +205,13 @@
 
             <div class="col-4 product" data-price="30" data-category="T-shirt">
                 <div class="panier">
+                    <img src="Images/product-7.jpg" class="image">
                     <div class="ajouter_panier">
                         <i class="fa-solid fa-cart-plus"></i>
                     </div>
-                    <img src="Images/product-7.jpg">
                 </div>
                 <h4>Red Printed T-shirt</h4>
+                <h5 class="reference">6</h5>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -217,12 +224,13 @@
 
             <div class="col-4 product" data-price="40" data-category="Watch">
                 <div class="panier">
+                    <img src="Images/product-8.jpg" class="image">
                     <div class="ajouter_panier">
                         <i class="fa-solid fa-cart-plus"></i>
                     </div>
-                    <img src="Images/product-8.jpg">
                 </div>
                 <h4>Red Printed Watch</h4>
+                <h5 class="reference">7</h5>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -240,9 +248,10 @@
                     <div class="ajouter_panier">
                         <i class="fa-solid fa-cart-plus"></i>
                     </div>
-                    <img src="Images/product-9.jpg">
+                    <img src="Images/product-9.jpg" class="image">
                 </div>
                 <h4>Red Printed Watch</h4>
+                <h5 class="reference">8</h5>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -258,9 +267,10 @@
                     <div class="ajouter_panier">
                         <i class="fa-solid fa-cart-plus"></i>
                     </div>
-                    <img src="Images/product-10.jpg">
+                    <img src="Images/product-10.jpg" class="image">
                 </div>
                 <h4>Red Printed shoes</h4>
+                <h5 class="reference">9</h5>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -276,9 +286,10 @@
                     <div class="ajouter_panier">
                         <i class="fa-solid fa-cart-plus"></i>
                     </div>
-                    <img src="Images/product-11.jpg">
+                    <img src="Images/product-11.jpg" class="image">
                 </div>
                 <h4>Red Printed shoes</h4>
+                <h5 class="reference">10</h5>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -294,9 +305,10 @@
                     <div class="ajouter_panier">
                         <i class="fa-solid fa-cart-plus"></i>
                     </div>
-                    <img src="Images/product-12.jpg">
+                    <img src="Images/product-12.jpg" class="image">
                 </div>
                 <h4>Red Printed Watch</h4>
+                <h5 class="reference">11</h5>
                 <div class="rating">
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -374,6 +386,7 @@
 
     <!-----------------JS----------------------->
     <script src="js/script.js"></script>
+    <script src="js/panier.js"></script>
 
 </body>
 
