--- a/checkout.html
+++ b/checkout.html
@@ -3,66 +3,214 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="checkout.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/detail.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!---- icon cdn link---->
+
+    <link rel="stylesheet" href="css/checkout.css">
+    <title>Checkout page</title>
 </head>
+
 <body>
-    <h1>Product Order Form</h1>
-    <div class="container">
-        <div class="informations">
-            <div class="info">
-                <label for="First Name">First Name</label>
-                <input type="text" placeholder="Amine"><br>
+
+ <!--making header-->
+    <header>
+
+        <nav id="nav">
+
+            <img src="images/logo-white.png" class="logo">
+
+            <ul class="menu-bar-side">
+                <li><a href="index.html" style=" all: unset;">Home</a></li>
+                <li><a href="Products.html" style=" all: unset;">Shope</a></li>
+                <li><a href="#" style=" all: unset;">about</a></li>
+                <li><a href="#" style=" all: unset;">contact us</a></li>
+            </ul>
+
+            <ul class="menu-bar">
+
+                <li>&#36;0.00</li>
+                <li><i class='fas fa-shopping-cart'></i></li>
+
+            </ul>
+
+            <i class="fa fa-bars"></i>
+        </nav>
+
+    </header>
+
+    <div class="container1">
+        <h3>Product Order Form</h3>
+        <div class="container2">
+            <div class="informations">
+                <div class="info">
+                    <div class="classLab">
+                        <label for="First Name">First Name<span style="color: red;">*</span></label>
+                    </div>
+                    <div class="classInput1">
+                        <input type="text" placeholder="Amine"><br>
+                    </div>
+                </div>
+                <div class="info">
+                    <div class="classLab">
+                        <label for="Last Name">Last Name<span style="color: red;">*</span></label><br>
+                    </div>
+                    <div class="classInput1">
+                        <input type="text" placeholder="Hmidouche"><br>
+                    </div>
+                </div>
+                <div class="info">
+                    <div class="classLab">
+                        <label for="Company Name">Company Name <br>(Optional)</label>
+                    </div>
+                    <div class="classInput">
+                        <input type="text" placeholder="yc"><br>
+                    </div>
+                </div>
+                <div class="info">
+                    <div class="classLab">
+                        <label for="Country">Country<span style="color: red;">*</span></label>
+                    </div>
+                    <div class="classInput">
+                        <input type="text" placeholder="Mexico"><br>
+                    </div>
+                </div>
+                <div class="info">
+                    <div class="classLab">
+                        <label for="Street Address">Street Address<span style="color: red;">*</span></label>
+                    </div>
+                    <div class="doubel_input">
+                        <input type="text" placeholder="Route Rabat Imm 5 N° 14"><br>
+                        <input type="text" placeholder=" Apartment, Suite, unit etc. (optional)"><br>
+                    </div>
+                </div>
+                <div class="info">
+                    <div class="classLab">
+                        <label for="City">Town / City<span style="color: red;">*</span></label>
+                    </div>
+                    <div class="classInput1">
+                        <input type="text" placeholder="Tanger"><br>
+                    </div>
+                </div>
+                <div class="info">
+                    <div class="classLab">
+                        <label for="Contry">State / Country<span style="color: red;">*</span></label>
+                    </div>
+                    <div class="classInput">
+                        <input type="text" placeholder=""><br>
+                    </div>
+                </div>
+                <div class="info">
+                    <div class="classLab">
+                        <label for="Postcode">Postcode / ZIP<span style="color: red;">*</span></label>
+                    </div>
+                    <div class="classInput1">
+                        <input type="text" placeholder="90060"><br>
+                    </div>
+                </div>
+                <div class="info">
+                    <div class="classLab">
+                        <label for="Phone">Phone<span style="color: red;">*</span></label>
+                    </div>
+                    <div class="classInput">
+                        <input type="text" placeholder=""><br>
+                    </div>
+                </div>
+                <div class="info">
+                    <div class="classLab">
+                        <label for="Email">Email Address<span style="color: red;">*</span></label>
+                    </div>
+                    <div class="classInput1">
+                        <input type="text" placeholder="amine.devinfo@gmail.com"><br>
+                    </div>
+                </div>
             </div>
-            <div class="info">
-                <label for="Last Name">Last Name</label>
-                <input type="text" placeholder=""><br>
+            <div class="info_panier">
+                <h2 class="titre2">Your Order</h2>
+                <div class="titre3">
+                    <div class="paiment">
+                        <p>Product Name </p>
+                        <span>$88.00</span>
+                    </div>
+                    <hr>
+                    <div class="paiment">
+                        <p>Subtotal </p>
+                        <span>$88.00</span>
+                    </div>
+                    <hr>
+                    <div class="paiment">
+                        <p>Shiping </p>
+                        <span>Free shipping</span>
+                    </div>
+                    <hr>
+                </div>
+                <p class="p1"><input type="radio"> Diret Bank Transfer</p>
+                <p class="p2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed beatae porro quaerat rem quas libero odio, fugiat, placeat ipsum dolores animi incidunt. Eum, placeat molestiae?</p>
+                <p class="p1"><input type="radio"> Carsh on Delivery</p>
+                <p class="p1"><input type="radio"> Paypal</p>
+                <button>Place Order</button>
             </div>
-            <div class="info">
-                <label for="Company Name">Company Name</label>
-                <input type="text" placeholder=""><br>
-            </div>
-            <div class="info"></div>
-                <label for="Country">Country</label>
-                <input type="text" placeholder=""><br>
-            </div>
-            <div class="info">
-                <label for="Street Address">Street Address</label>
-                <input type="text" placeholder=""><br>
-                <input type="text" placeholder=""><br>
-            </div>
-            <div class="info">
-                <label for="City">Town / City</label>
-                <input type="text" placeholder=""><br>
-            </div>
-            <div class="info">
-                <label for="Contry">State / Country</label>
-                <input type="text" placeholder=""><br>
-            </div>
-            <div class="info">
-                <label for="Postcode">Postcode / ZIP</label>
-                <input type="text" placeholder=""><br>
-            </div>
-            <div class="info">
-                <label for="Phone">Phone</label>
-                <input type="text" placeholder=""><br>
-            </div>
-            <div class="info">
-                <label for="Email">Email Address</label>
-                <input type="text" placeholder=""><br>
-            </div>
-        </div>
-        <div class="info_panier">
-            <h2>Your Order</h2>
-            <h3>product Name <span>$88.00</span></h3>
-            <h3>sbtotal <span>$88.00</span></h3>
-            <h3>Shiping <span>free shipping</span></h3>
-            <h3>Diret Bank Transfer</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed beatae porro quaerat rem quas libero odio, fugiat, placeat ipsum dolores animi incidunt. Eum, placeat molestiae?</p>
-            <h3>Carsh on Delivery</h3>
-            <h3>Paypal</h3>
-            <buton>Place Order</buton>
         </div>
     </div>
+    <!-------footer------->
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+
+
+                <div class="footer-col-1">
+                    <h3>Download Our App</h3>
+                    <p>Download App for Android and Ios mobile phone.</p>
+
+
+                    <div class="app-logo">
+                        <img src="images/play-store.png">
+                        <img src="images/app-store.png">
+                    </div>
+
+                </div>
+
+                <div class="footer-col-2">
+                    <img src="images/logo-white.png">
+                    <p>Our purpose is To Sustainably Make the Pleasure and Benefits of Sports Accessible to the Many.
+                    </p>
+                </div>
+
+                <div class="footer-col-3">
+                    <h3>Useful Links</h3>
+                    <ul>
+                        <li>Coupons</li>
+                        <li>Blog Post</li>
+                        <li>Return Policy</li>
+                        <li>Join Affiliate</li>
+                    </ul>
+
+                </div>
+
+                <div class="footer-col-4">
+                    <h3>Follow Us</h3>
+                    <ul>
+                        <li>Facebook</li>
+                        <li>Twitter</li>
+                        <li>Instagram</li>
+                        <li>Youtube</li>
+                    </ul>
+
+                </div>
+            </div>
+            <!--add horizontal line and copyright text along with clickable link-->
+            <hr>
+            <a href="" class="copyright">Copyright 2024 - Made with ❤️ LorenzCipher</a>
+        </div>
+    </div>
+
 </body>
 </html>
